# epolyscat-django-app

./: setup.cfg
docs/: Views-page.md  WS0-code-health.md  WS1-run-grouping.md  WS2-collections-routing.md  WS3-submit-lifecycle.md  WS4-output-viewing.md  WS5-grpc-migration-handoff.md
epolyscat_django_app/: airavata_gateway.py  apps.py  db_router.py  drf_auth.py  models.py  package.json  run_store.py  serializers.py  urls.py  user_storage.py  views.py  vue.config.js
epolyscat_django_app/migrations/: 0023_auto_20260617_1802.py  0024_alter_view_unique_together.py
epolyscat_django_app/src/: App.vue
epolyscat_django_app/src/components/Pages/: Documentation.vue  Experiments.vue  ResubmitRun.vue  Run.vue  Runs.vue  Views.vue
epolyscat_django_app/src/components/blocks/: AppLeftNav.vue  ButtonsGroup.vue  PathSelecter.vue
epolyscat_django_app/src/service/: epolyscat-service.js
epolyscat_django_app/src/store/: index.js
epolyscat_django_app/src/store/modules/: input-storage.store.js  run-storage.store.js  view-storage.store.js
epolyscat_django_app/static/epolyscat_django_app/wc/: adpf-compat.js  adpf.min.js
epolyscat_django_app/templates/epolyscat_django_app/: application.html
epolyscat_django_app/tests/: settings.py  test_airavata_gateway.py  test_run_store.py  test_trecx_utils.py
